runtime/ErrorHandling/VeryEarlyAssertTest.java fails after 8232080

XMLWordPrintable

    • b21
    • Verified

        Found hs_err file. Scanning...
        Found: # fatal error: HOTSPOT_FATAL_ERROR_DURING_DYNAMIC_INITIALIZATION.
        ----------System.err:(12/745)----------
        java.lang.RuntimeException: hs-err file incomplete (missing END marker.)
        at VeryEarlyAssertTest.main(VeryEarlyAssertTest.java:107)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:564)
        at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
        at java.base/java.lang.Thread.run(Thread.java:830)

        JavaTest Message: Test threw exception: java.lang.RuntimeException
        JavaTest Message: shutting down test

              Assignee:
              Mark Reinhold
              Reporter:
              Mark Reinhold
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: