8233137: runtime/ErrorHandling/VeryEarlyAssertTest.java fails after 8232080

Reviewed-by: stuefe, iignatyev, mchung